fixed sharpe spacing on mobile iphone 6

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -34,6 +34,10 @@ height: 13vw;
 width: 17vw;
 }
 
+.margin-left{
+  margin-left: 3vw;
+}
+
 .backdrop {
     z-index: 1;
     background: rgba(0, 0, 0, 0.384);
